--- a/index.html
+++ b/index.html
@@ -16,8 +16,31 @@
 <body class="bg-warning">
 
     <div class="grid">
-        
-    </div>   
+        <div class="card" style="width: 30rem;">
+            <div class="bg-info p-2">
+                <h1 class="p-2 text-center">TODO App</h1>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Add task...">
+                    <div class="input-group-append">
+                        <button class="btn btn-success addBtn" type="button">Add</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item d-flex justify-content-between align-items-center">Laundry 
+                        <span><button class="btn btn-danger">Delete</button></span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">Wash the dishes 
+                        <span><button class="btn btn-danger">Delete</button></span>
+                    </li>
+                    <li class="list-group-item checked d-flex justify-content-between align-items-center">Code your project 
+                        <span><button class="btn btn-danger">Delete</button></span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
