--- a/index.html
+++ b/index.html
@@ -20,24 +20,14 @@
             <div class="bg-info p-2">
                 <h1 class="p-2 text-center">TODO App</h1>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" id="todo_input" placeholder="Add task...">
+                    <input type="text" class="form-control" class="todo_input" placeholder="Add task...">
                     <div class="input-group-append">
                         <button class="btn btn-success" type="button" id="add_btn">Add</button>
                     </div>
                 </div>
             </div>
             <div class="card-body">
-                <ul class="list-group list-group-flush" id="todo_list">
-                    <li class="list-group-item d-flex justify-content-between align-items-center" id="todo_item">Laundry 
-                        <span><button class="btn btn-delete btn-danger" id="delete">Delete</button></span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">Wash the dishes 
-                        <span><button class="btn btn-delete btn-danger" onclick="deleteTask()">Delete</button></span>
-                    </li>
-                    <li class="list-group-item checked d-flex justify-content-between align-items-center">Code your project 
-                        <span><button class="btn btn-delete btn-danger"  onclick="deleteTask()">Delete</button></span>
-                    </li>
-                </ul>
+                <ul class="list-group list-group-flush" id="todo_list"></ul>
             </div>
         </div>
     </div>
