Some errors were solved.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="bg-info p-2">
                 <h1 class="p-2 text-center">TODO App</h1>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" class="todo_input" placeholder="Add task...">
+                    <input type="text" class="form-control" id="todo_input" placeholder="Add task...">
                     <div class="input-group-append">
                         <button class="btn btn-success" type="button" id="add_btn">Add</button>
                     </div>
